Crash when opening bunny.blend file #77192

Closed
opened 2020-05-30 09:16:10 +02:00 by Ghost · 20 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 550 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.54

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-05-29 18:08, hash: 2ee94c954d Notice: it is crashing in Blender 2.83 as well
Worked: Blender 2.82

Short description of error
Crash when opening bunny.blend file

Exact steps for others to reproduce the error
Open the Blend file, Blender should crash if it doesn't crash my blender_debug_output.txt is below.
Bunny.blend
blender_debug_output.txt

blender_system_info.txt

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 550 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.54 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-05-29 18:08, hash: `2ee94c954d` Notice: it is crashing in Blender 2.83 as well Worked: Blender 2.82 **Short description of error** Crash when opening bunny.blend file **Exact steps for others to reproduce the error** Open the Blend file, Blender should crash if it doesn't crash my blender_debug_output.txt is below. [Bunny.blend](https://archive.blender.org/developer/F8564798/Bunny.blend) [blender_debug_output.txt](https://archive.blender.org/developer/F8564818/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F8564819/blender_system_info.txt)
Author

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm. Also affects 2.83.0 2020-05-29 17:42 691a1e3357.
Windows-10-10.0.18362
GTX 1050Ti 445.87

And

Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye
GTX 1050Ti 440.82

Can confirm. Also affects 2.83.0 2020-05-29 17:42 `691a1e3357`. Windows-10-10.0.18362 GTX 1050Ti 445.87 And Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye GTX 1050Ti 440.82
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Please upload this file too.
C:\blend_temp\Bunny.crash.txt

Please upload this file too. `C:\blend_temp\Bunny.crash.txt`
Member

Bunny.crash.txt

On Linux with 2.83.0.

[Bunny.crash.txt](https://archive.blender.org/developer/F8564898/Bunny.crash.txt) On Linux with 2.83.0.

Added subscriber: @Smjert

Added subscriber: @Smjert

I think it's worth noting that on Blender 2.82a it doesn't crash but it logs the following:

Warning: property 'release_confirm' not found in keymap item 'OperatorProperties'
Read blend: /home/smjert/Documents/Modeling/Bugs/Bunny.blend
scripts disabled for "/home/smjert/Documents/Modeling/Bugs/Bunny.blend", skipping 'Rabbit_rig_UI.py'
Dependency cycle detected:
  OBRIG-Rabbit/FootRoll.R/BONE_LOCAL() depends on
  OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.R"].location) via 'Driver -> Driven Property'
  OBRIG-Rabbit/FootRoll.R/BONE_LOCAL() via 'RNA Target -> Driver'
Dependency cycle detected:
  OBRIG-Rabbit/FootRoll.R/BONE_LOCAL() depends on
  OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.R"].location) via 'Driver -> Driven Property'
  OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.R"].location) via 'Driver Order'
  OBRIG-Rabbit/FootRoll.R/BONE_LOCAL() via 'RNA Target -> Driver'
Dependency cycle detected:
  OBRIG-Rabbit/FootRoll.L/BONE_LOCAL() depends on
  OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.L"].location) via 'Driver -> Driven Property'
  OBRIG-Rabbit/FootRoll.L/BONE_LOCAL() via 'RNA Target -> Driver'
Dependency cycle detected:
  OBRIG-Rabbit/FootRoll.L/BONE_LOCAL() depends on
  OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.L"].location) via 'Driver -> Driven Property'
  OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.L"].location) via 'Driver Order'
  OBRIG-Rabbit/FootRoll.L/BONE_LOCAL() via 'RNA Target -> Driver'
Detected 4 dependency cycles
ERROR (bke.anim_sys): ../source/blender/blenkernel/intern/anim_sys.c:4160 BKE_animsys_eval_driver: invalid driver - (null)[0]
ERROR (bke.anim_sys): ../source/blender/blenkernel/intern/anim_sys.c:4160 BKE_animsys_eval_driver: invalid driver - (null)[0]
I think it's worth noting that on Blender 2.82a it doesn't crash but it logs the following: ``` Warning: property 'release_confirm' not found in keymap item 'OperatorProperties' Read blend: /home/smjert/Documents/Modeling/Bugs/Bunny.blend scripts disabled for "/home/smjert/Documents/Modeling/Bugs/Bunny.blend", skipping 'Rabbit_rig_UI.py' Dependency cycle detected: OBRIG-Rabbit/FootRoll.R/BONE_LOCAL() depends on OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.R"].location) via 'Driver -> Driven Property' OBRIG-Rabbit/FootRoll.R/BONE_LOCAL() via 'RNA Target -> Driver' Dependency cycle detected: OBRIG-Rabbit/FootRoll.R/BONE_LOCAL() depends on OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.R"].location) via 'Driver -> Driven Property' OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.R"].location) via 'Driver Order' OBRIG-Rabbit/FootRoll.R/BONE_LOCAL() via 'RNA Target -> Driver' Dependency cycle detected: OBRIG-Rabbit/FootRoll.L/BONE_LOCAL() depends on OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.L"].location) via 'Driver -> Driven Property' OBRIG-Rabbit/FootRoll.L/BONE_LOCAL() via 'RNA Target -> Driver' Dependency cycle detected: OBRIG-Rabbit/FootRoll.L/BONE_LOCAL() depends on OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.L"].location) via 'Driver -> Driven Property' OBRIG-Rabbit/Parameters Component/DRIVER(pose.bones["FootRoll.L"].location) via 'Driver Order' OBRIG-Rabbit/FootRoll.L/BONE_LOCAL() via 'RNA Target -> Driver' Detected 4 dependency cycles ERROR (bke.anim_sys): ../source/blender/blenkernel/intern/anim_sys.c:4160 BKE_animsys_eval_driver: invalid driver - (null)[0] ERROR (bke.anim_sys): ../source/blender/blenkernel/intern/anim_sys.c:4160 BKE_animsys_eval_driver: invalid driver - (null)[0] ```

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

@ErickNyanduKabongo (cc @Alaska) this file is too complex (52MB). It is up to the reporter (or the community) to simplify it before it can be considered confirmed.

Normally .blend files can be simplified by removing most objects and disabling settings, until the problem reveals itself more clearly. The file should be as small as possible.

@ErickNyanduKabongo (cc @Alaska) this file is too complex (52MB). It is up to the reporter (or the community) to simplify it before it can be considered confirmed. Normally .blend files can be simplified by removing most objects and disabling settings, until the problem reveals itself more clearly. The file should be as small as possible.
Author

In #77192#942529, @dfelinto wrote:
@ErickNyanduKabongo (cc @Alaska) this file is too complex (52MB). It is up to the reporter (or the community) to simplify it before it can be considered confirmed.

Normally .blend files can be simplified by removing most objects and disabling settings, until the problem reveals itself more clearly. The file should be as small as possible.

This is a .blend file from Blendercloud, did you ask the Blendercloud people to confirm the crash? Can they simplify the file? This report is me indirectly pointing a problem that they have in the Blendercloud.

> In #77192#942529, @dfelinto wrote: > @ErickNyanduKabongo (cc @Alaska) this file is too complex (52MB). It is up to the reporter (or the community) to simplify it before it can be considered confirmed. > > Normally .blend files can be simplified by removing most objects and disabling settings, until the problem reveals itself more clearly. The file should be as small as possible. This is a .blend file from Blendercloud, did you ask the Blendercloud people to confirm the crash? Can they simplify the file? This report is me indirectly pointing a problem that they have in the Blendercloud.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscriber: @Sergey

Added subscriber: @Sergey

I didn't know this file was from the blendercloud.

Still, it would have helped if someone could simplify it, but I will do it myself.

#1 0x0000000002bd9444 in DEG::DepsgraphRelationBuilder::build_driver_relations(DEG::IDNode*) (this=0x7fffffffcec0, id_node=0x7fffc948e288)

Full backtrace: P1441

I didn't know this file was from the blendercloud. Still, it would have helped if someone could simplify it, but I will do it myself. `#1 0x0000000002bd9444 in DEG::DepsgraphRelationBuilder::build_driver_relations(DEG::IDNode*) (this=0x7fffffffcec0, id_node=0x7fffc948e288)` Full backtrace: [P1441](https://archive.blender.org/developer/P1441.txt)

Added subscriber: @mont29

Added subscriber: @mont29

This is trivial fix, just missing check for NULL rna path in driver (which is done everywhere else in code)... Fix incoming.

This is trivial fix, just missing check for NULL rna path in driver (which is done everywhere else in code)... Fix incoming.
Bastien Montagne self-assigned this 2020-06-02 10:19:06 +02:00

This issue was referenced by 428c0f9ad5

This issue was referenced by 428c0f9ad57315cb23a9b50ada547654f34b9b5d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:35:43 +01:00
Sign in to join this conversation.
7 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#77192
No description provided.