Fix T77192: Crash when opening bunny.blend file.

New depsgraph code handling drivers was not checking for possible NULL
rna_path, as done everywhere else in code...